--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "scripts": {
     "build": "tsc",
     "start": "probot run ./lib/index.js",
+    "dev": "tsc --watch & probot run ./lib/index.js",
     "test": "vitest"
   },
   "dependencies": {
