refactor: Modularize GitHub documentation assistant
- Split main application logic into separate modules for better organization
- Created dedicated services for GitHub API interactions
- Added AI suggestions module with improved documentation generation
- Introduced type definitions for better type safety
- Enhanced README with detailed project description and architecture overview
- Updated package.json with more descriptive keywords and description

--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "my-first-app",
   "version": "1.0.0",
   "private": true,
-  "description": "A Probot app",
+  "description": "A Probot app for GitHub with AI-powered documentation suggestions",
   "author": "Decker",
   "license": "ISC",
   "homepage": "https://github.com//",
   "keywords": [
     "probot",
     "github",
-    "probot-app"
+    "probot-app",
+    "ai",
+    "documentation"
   ],
   "scripts": {
     "build": "tsc",
