--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ai-sdk/openai": "^1.2.1",
     "ai": "^4.1.54",
     "dotenv": "^16.4.7",
+    "ollama-ai-provider": "^1.2.0",
     "probot": "^13.0.1"
   },
   "devDependencies": {
