refactor: Enhance MDX documentation suggestion processing
- Update launch configuration to rebuild project before debugging
- Modify suggestions module to focus specifically on MDX documentation
- Remove generic documentation detection function
- Refine AI prompt to emphasize MDX-specific documentation improvements
- Update logging and error handling for MDX documentation suggestions

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,7 +2,7 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "command": "npm run start",
+      "command": "rm -rf lib && npm run build && npm run start",
       "name": "Debug Bot Core",
       "request": "launch",
       "type": "node-terminal",
