--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@ai-sdk/openai": "^1.2.1",
     "ai": "^4.1.54",
+    "axios": "^1.8.2",
     "dotenv": "^16.4.7",
     "ollama-ai-provider": "^1.2.0",
     "probot": "^13.0.1"
